--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="index.js"></script>
+    <script src="jsLabs/index.js"></script>
     <h1>Hello World</h1>
 </body>
 </html>
