--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <script src="jsLabs/index.js"></script>
     <h1>Hello World</h1>
+    <button id="but">Click</button>
 </body>
 </html>
