--- a/jsLab1/index.html
+++ b/jsLab1/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Hello World</h1>
-    <script src="jsLabs/index.js"></script>
+    <script src="/jsLab1/jsFile/index.js"></script>
 </body>
 </html>
