--- a/jsLab3/index.html
+++ b/jsLab3/index.html
@@ -4,11 +4,13 @@
 	<meta charset="UTF-8">
 	<title>My application</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
 	<h1>My application</h1>
 	<h2>More details in the console</h2>
-
-
+	<script src="./jsFile/SpeakHello.js"></script>
+	<script src="./jsFile/SpeakGoodBye.js"></script>
+	<script src="./jsFile/script.js"></script>
 </body>
 </html>
