--- a/OCProjekt/index.html
+++ b/OCProjekt/index.html
@@ -19,26 +19,160 @@
         <section id="wired" class="content active">
             <h2>Провідні мережі</h2>
             <p>Провідна мережа — це тип комп'ютерної мережі, в якій пристрої з'єднуються між собою за допомогою фізичних кабелів, таких як Ethernet-кабелі. Вона забезпечує стабільне та швидке з'єднання, що робить її ідеальною для передачі великих обсягів даних, роботи з високонавантаженими програмами або використання в умовах, де потрібна висока надійність. Провідні мережі зазвичай використовуються в офісах, будинках чи дата-центрах, де важлива безперебійна робота та мінімальні затримки. Основними компонентами такої мережі є маршрутизатори, комутатори, кабелі та мережеві адаптери, а налаштування в Windows дозволяє легко конфігурувати параметри підключення, такі як IP-адреса чи DNS.</p>
-            <p>Для налаштування провідної мережі в Windows виконайте наступні кроки:</p>
-            <ul>
-                <li>Підключіть Ethernet-кабель до комп'ютера та маршрутизара.</li>
-                <li>Відкрийте "Панель керування" → "Мережа та Інтернет" → "Центр керування мережами".</li>
-                <li>Виберіть "Налаштування нового підключення".</li>
-                <li>Вкажіть параметри IP (автоматично або вручну).</li>
-                <li>Перевірте підключення через командний рядок командою <code>ping 8.8.8.8</code>.</li>
-            </ul>
+            <p>IP-адреса (Internet Protocol Address) — це унікальний номер твого пристрою в мережі. Вона схожа на поштову адресу, тільки для комп’ютера. Приклад: 192.168.1.10</p>
+            <p>Маска підмережі (Subnet Mask) — це параметр, який говорить, яка частина IP-адреси належить до мережі, а яка — до конкретного пристрою. Найпоширеніша маска: 255.255.255.0</p>
+            <p>Шлюз (або основний шлюз, Default Gateway) — це точка виходу з локальної мережі в Інтернет.  Зазвичай це адреса твого маршрутизатора (роутера), наприклад: 192.168.1.1</p>
+            <p>DNS (Domain Name System) — це сервіс, який перетворює назви сайтів на IP-адреси. Наприклад: коли ти вводиш google.com, DNS знаходить його IP-адресу (типу 142.250.185.206), і комп’ютер уже з нею працює.</p>
+            <h3>Налаштування провідної мережі:</h3>
+            <ol>
+                <li><strong>Відкрити налаштування мережі:</strong>
+                    <ul>
+                        <li>Панель керування → Центр мережних підключень і спільного доступу</li>
+                        <li>Або: Параметри → Мережа та Інтернет → Ethernet</li>
+                    </ul>
+                </li>
+                <li><strong>Перевірити стан з'єднання:</strong>
+                    <ul>
+                        <li>Клікнути на Ethernet → "Властивості"</li>
+                        <li>У вкладці "Протокол Інтернету версії 4 (TCP/IPv4)" встановити:
+                            <ul>
+                                <li>Автоматичне отримання IP-адреси, або</li>
+                                <li>Вручну ввести IP-адресу, маску підмережі, шлюз і DNS</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li><strong>Перевірка доступу до Інтернету:</strong>
+                    <ul>
+                        <li>Використати команду ping у командному рядку: ping google.com</li>
+                    </ul>
+                </li>
+            </ol>
+            <p>Приклад спроєктованої простої провідної мережі у симуляції Cisco Poket Tracer із настройкою:</p>
+            
+            
         </section>
         <section id="wireless" class="content">
             <h2>Безпровідні мережі</h2>
             <p>Безпровідна мережа — це тип комп'ютерної мережі, в якій пристрої з'єднуються між собою без використання фізичних кабелів, за допомогою радіохвиль, найчастіше через технологію Wi-Fi. Вона забезпечує мобільність і зручність, дозволяючи підключати до мережі смартфони, ноутбуки, планшети та інші пристрої в межах зони покриття. Безпровідні мережі широко використовуються в будинках, офісах, кафе та громадських місцях, де потрібен гнучкий доступ до інтернету. Основними компонентами є маршрутизатори або точки доступу, а налаштування в Windows дозволяє швидко підключитися до мережі, ввівши пароль, та конфігурувати параметри, такі як автоматичне підключення чи вибір частотного діапазону.</p>
-            <p>Для налаштування безпровідної мережі в Windows виконайте наступні кроки:</p>
-            <ul>
-                <li>Переконайтеся, що Wi-Fi адаптер увімкнено.</li>
-                <li>Клацніть на іконку мережі в системному треї.</li>
-                <li>Виберіть доступну Wi-Fi мережу та натисніть "Підключитися".</li>
-                <li>Введіть пароль мережі, якщо потрібно.</li>
-                <li>Перевірте підключення, відкривши браузер.</li>
-            </ul>
+            <p>IP-адреса (Internet Protocol Address) — це унікальний номер твого пристрою в мережі. Вона схожа на поштову адресу, тільки для комп’ютера. Приклад: 192.168.1.10</p>
+            <p>Маска підмережі (Subnet Mask) — це параметр, який говорить, яка частина IP-адреси належить до мережі, а яка — до конкретного пристрою. Найпоширеніша маска: 255.255.255.0</p>
+            <p>Шлюз (або основний шлюз, Default Gateway) — це точка виходу з локальної мережі в Інтернет.  Зазвичай це адреса твого маршрутизатора (роутера), наприклад: 192.168.1.1</p>
+            <p>DNS (Domain Name System) — це сервіс, який перетворює назви сайтів на IP-адреси. Наприклад: коли ти вводиш google.com, DNS знаходить його IP-адресу (типу 142.250.185.206), і комп’ютер уже з нею працює.</p>
+            <h3>Налаштування роутера у безпровідній мережі</h3>
+            <ol>
+                <li><strong>Підключення до роутера:</strong>
+                    <ul>
+                        <li>Підключи роутер до електромережі.</li>
+                        <li>Встав кабель інтернету (від провайдера) в порт WAN / Internet.</li>
+                        <li>Підключи комп’ютер до роутера:
+                            <ul>
+                                <li>Через Ethernet-кабель, або</li>
+                                <li>Через Wi-Fi (зазвичай на зворотньому боці роутера написано ім’я мережі та стандартний пароль).</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li><strong>Вхід у налаштування роутера</strong>
+                    <ul>
+                        <li>Відкрий браузер.</li>
+                        <li>Уведи одну з адрес в адресний рядок: 192.168.0.1 або 192.168.1.1</li>
+                        <li>Введи логін і пароль для входу(Логін: admin; Пароль: admin або 1234):</li>
+                    </ul>
+                </li>
+                <li><strong>Налаштування інтернету (WAN)</strong>
+                    <ul>
+                        <li>Увійшовши, шукай вкладку Network / Інтернет / WAN і вибери тип підключення:
+                            <ul>
+                                <li>Dynamic IP (Динамічна IP) — якщо провайдер нічого особливого не вимагає.</li>
+                                <li>PPPoE — якщо тобі дали логін і пароль для доступу (часто використовується).</li>
+                                <li>Static IP — якщо провайдер дав тобі конкретні IP-дані.</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li><strong>Налаштування Wi-Fi (Wireless)</strong>
+                    <ul>
+                        <li>Зайди у розділ Wireless / Wi-Fi Settings / Wireless Settings.</li>
+                        <li>Налаштуй основні параметри:
+                            <ul>
+                                <li>Wireless Network Name (SSID): Назва твоєї Wi-Fi мережі.</li>
+                                <li>Enable Wireless: Увімкнути Wi-Fi (поставити галочку)</li>
+                                <li>Region: Обери свою країну</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li><strong>Захист мережі (пароль)</strong>
+                    <ul>
+                        <li>Перейди до розділу Wireless Security / Security.</li>
+                        <li>Вибери:
+                            <ul>
+                                <li>Security Mode: WPA2-PSK (найкраща безпека для домашнього інтернету)</li>
+                                <li>Password / PSK Key: Введи свій пароль (мін. 8 символів)</li>                       
+                            </ul>
+                        </li>
+                        <li>Зберегти і перезагрузити роутер.</li>
+                    </ul>
+                </li>
+            </ol>
+            <h3>Налаштування безпровідної мережі:</h3>
+            <ol>
+                <li><strong>Підключення до мережі:</strong>
+                    <ul>
+                        <li>Клікнути на іконку Wi-Fi у панелі задач</li>
+                        <li>Вибрати доступну мережу</li>
+                        <li>Ввести пароль, якщо необхідно</li>
+                    </ul>
+                </li>
+                <li><strong>Налаштування адаптера:</strong>
+                    <ul>
+                        <li>Панель керування → Центр мережевих підключень → Зміна параметрів адаптера</li>
+                        <li>Правий клік по "Бездротове мережеве з'єднання" → Властивості</li>
+                        <li>Налаштування TCP/IPv4 автоматично або вручну</li>
+                    </ul>
+                </li>
+            </ol>
+            <p>Приклад спроєктованої простої безпровідної мережі у симуляції Cisco Poket Tracer із настройкою:</p>
+        </section>
+        <section class="summary">
+            <h2>Підсумок</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Характеристика</th>
+                        <th>Провідна мережа (Ethernet)</th>
+                        <th>Безпровідна мережа (Wi-Fi)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Тип з'єднання</td>
+                        <td>Через кабель</td>
+                        <td>Через радіохвилі</td>
+                    </tr>
+                    <tr>
+                        <td>Швидкість</td>
+                        <td>Висока</td>
+                        <td>Залежить від сигналу</td>
+                    </tr>
+                    <tr>
+                        <td>Стабільність</td>
+                        <td>Висока</td>
+                        <td>Може змінюватись</td>
+                    </tr>
+                    <tr>
+                        <td>Мобільність</td>
+                        <td>Обмежена</td>
+                        <td>Висока</td>
+                    </tr>
+                    <tr>
+                        <td>Налаштування</td>
+                        <td>Через Ethernet</td>
+                        <td>Через Wi-Fi адаптер</td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
     </main>
 
