--- a/OCProjekt/index.html
+++ b/OCProjekt/index.html
@@ -49,6 +49,7 @@
                 </li>
             </ol>
             <p>Приклад спроєктованої простої провідної мережі у симуляції Cisco Poket Tracer із настройкою:</p>
+            <img src="/OCProjekt/simphoto/cabels.png" alt="/OCProjekt">
             
             
         </section>
@@ -134,6 +135,7 @@
                 </li>
             </ol>
             <p>Приклад спроєктованої простої безпровідної мережі у симуляції Cisco Poket Tracer із настройкою:</p>
+            <img src="/OCProjekt/simphoto/router.png" alt="/OCProjekt">
         </section>
         <section class="summary">
             <h2>Підсумок</h2>
