--- a/jsLab5/index.html
+++ b/jsLab5/index.html
@@ -8,33 +8,34 @@
  
 </head>
 <body>
-  <div id="start-screen">
-    <h1>Pixel Hunt</h1>
-    <label for="difficulty">Складність:</label>
-    <select id="difficulty">
-      <option value="easy">Легкий</option>
-      <option value="medium">Середній</option>
-      <option value="hard">Складний</option>
-      <option value="impossible">Неможливий</option>
-    </select>
-    <br>
-    <label for="color">Колір блоку:</label>
-    <select id="color"></select>
-    <br>
-    <button id="start-button">Старт</button>
-  </div>
-
-  <div id="game-screen" style="display: none;">
-    <div id="score">Рахунок: 0</div>
-    <div id="lives">Життя: 3</div>
-    <div id="game-area"></div>
-  </div>
-
-  <div id="end-screen" style="display: none;">
-    <h2>Гра завершена!</h2>
-    <p id="final-score"></p>
-    <button id="ok-button">OK</button>
-  </div>
+    <div id="start-screen">
+      <h1>Pixel Hunt</h1>
+      <label for="difficulty">Складність:</label>
+      <select id="difficulty">
+        <option value="easy">Легкий</option>
+        <option value="medium">Середній</option>
+        <option value="hard">Складний</option>
+        <option value="impossible">Неможливий</option>
+      </select>
+      <br>
+      <label for="color">Колір блоку:</label>
+      <select id="color"></select>
+      <br>
+      <button id="start-button">Старт</button>
+    </div>
+  
+    <div id="game-screen" style="display: none;">
+      <div id="score">Рахунок: 0</div>
+      <div id="lives">Життя: 3</div>
+      <div id="time-left">Час: 0.0 с</div>
+      <div id="game-area"></div>
+    </div>
+  
+    <div id="end-screen" style="display: none;">
+      <h2>Гра завершена!</h2>
+      <p id="final-score"></p>
+      <button id="ok-button">OK</button>
+    </div>
 
   <script src="./index.js"> </script>
 </body>
