--- a/jsLab4/index.html
+++ b/jsLab4/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Демонстрація створеної бібліотеки сортування</h1>
-    <script src="/jsLab4/jsFile/index.js"></script>
+    <script src="./jsFile/index.js"></script>
     <script>
 
         const createDenseArr = (length) => {
