--- a/jsLab6/index.html
+++ b/jsLab6/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style/index.css">
 </head>
 <body>
-    <script url="./js/index.js"> </script>
+    <script src="./js/index.js"> </script>
     <h1>Lights Out 5x5</h1>
     <div id="gameBoard"></div>
     <div class="controls">
