--- a/jsLab6/index.html
+++ b/jsLab6/index.html
@@ -15,7 +15,13 @@
         <button onclick="restartGame()">Restart</button>
     </div>
     <div id="status"></div>
-
+    <div id="winModal" class="win-modal">
+        <div class="win-modal-content">
+            <h2>Вітаємо, ви виграли!</h2>
+            <p id="winMessage"></p>
+            <button onclick="newGame()" class="new-game-button">New Game</button>
+        </div>
+    </div>
    
 </body>
 </html>
