--- a/galaga/index.html
+++ b/galaga/index.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/index.css">
-    <title>Retro Galaga</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Space Shooter</title>
+  <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
   <div class="game-container">
+    <div id="startScreen" class="start-screen">
+      <h1>Space Shooter</h1>
+      <div class="controls">
+        <label for="volume">Гучність:</label>
+        <input type="range" id="volume" min="0" max="1" step="0.1" value="0.5">
+        <label for="musicToggle">Фонова музика:</label>
+        <input type="checkbox" id="musicToggle" checked>
+      </div>
+      <button id="startButton">Погнали!!!</button>
+    </div>
+    <p id="score" class="score">Очки: 0</p>
     <canvas id="gameCanvas"></canvas>
-    <div class="score">Очки: <span id="score">0</span></div>
-    <div class="game-over" id="gameOver">
+    <div id="gameOver" class="game-over">
       <h1>Гру Закінчено!</h1>
       <p>Очки: <span id="finalScore">0</span></p>
       <button onclick="restartGame()">Грати Знова</button>
+      <button onclick="returnToMenu()">Повернутися в меню</button>
     </div>
   </div>
-    <script src="./js/index.js"></script>
+  <script src="./js/index.js"></script>
 </body>
 </html>
