--- a/jsLab7/index.html
+++ b/jsLab7/index.html
@@ -34,7 +34,7 @@
 
 
     function displayCategories() {
-      loadJSON('jsLab7/categories.json', function (data) {
+      loadJSON('categories.json', function (data) {
         let html = '<h2 class="text-2xl font-bold mb-4">Каталог</h2><ul class="space-y-2">';
         data.categories.forEach(category => {
           html += `<li><a href="#" class="text-blue-600 hover:underline" onclick="loadCategory('${category.shortname}')">${category.name}</a></li>`;
@@ -46,7 +46,7 @@
     }
 
     function loadCategory(shortname) {
-      loadJSON(`jsLab7/${shortname}.json`, function (data) {
+      loadJSON(`${shortname}.json`, function (data) {
         let html = `<h2 class="text-2xl font-bold mb-4">${data.categoryName}</h2>`;
         html += '<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">';
         data.items.forEach(item => {
@@ -66,7 +66,7 @@
 
    
     function loadSpecials() {
-      loadJSON('jsLab7/categories.json', function (data) {
+      loadJSON('categories.json', function (data) {
         const randomCategory = data.categories[Math.floor(Math.random() * data.categories.length)];
         loadCategory(randomCategory.shortname);
       });
